; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_diff_list__find_differences.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_diff_list__find_differences.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_diff_find_data = type { i32* }

@queue_difference = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_merge_diff_list__find_differences(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca [3 x i32*], align 16
  %10 = alloca %struct.merge_diff_find_data, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = getelementptr inbounds [3 x i32*], [3 x i32*]* %9, i64 0, i64 0
  %12 = load i32*, i32** %6, align 8
  store i32* %12, i32** %11, align 8
  %13 = getelementptr inbounds i32*, i32** %11, i64 1
  %14 = load i32*, i32** %7, align 8
  store i32* %14, i32** %13, align 8
  %15 = getelementptr inbounds i32*, i32** %13, i64 1
  %16 = load i32*, i32** %8, align 8
  store i32* %16, i32** %15, align 8
  %17 = getelementptr inbounds %struct.merge_diff_find_data, %struct.merge_diff_find_data* %10, i32 0, i32 0
  %18 = load i32*, i32** %5, align 8
  store i32* %18, i32** %17, align 8
  %19 = getelementptr inbounds [3 x i32*], [3 x i32*]* %9, i64 0, i64 0
  %20 = load i32, i32* @queue_difference, align 4
  %21 = call i32 @git_iterator_walk(i32** %19, i32 3, i32 %20, %struct.merge_diff_find_data* %10)
  ret i32 %21
}

declare dso_local i32 @git_iterator_walk(i32**, i32, i32, %struct.merge_diff_find_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
